--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title> Tarjeta de Credito</title>
   </head>
   <body>
-    <script type="text/javascript" src="app.js">
-
+    <script type="text/javascript" src="assets/app.js">
     </script>
   </body>
 </html>
